--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Groet voor de start -->
 
-        <section hidden>
+        <section>
           <p>
             De startlijst van de Tour de France 2024 is bekend. (wijzigingen
             voorbehouden) Vanaf nu kun je je lijst doorgeven.
@@ -88,7 +88,7 @@
 
       <section id="uitvallers-container" class="hidden">
         <h3 class="underline">Lijst met uitvallers:</h3>
-        <p>(Laatst bijgewerkt: 5 juli)</p>
+        <p>(Laatst bijgewerkt: 6 juli)</p>
         <ul id="out-of-course"></ul>
         <button id="close-button-3" class="button-gray">Terug</button>
       </section>
