--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Groet voor de start -->
 
-        <section hidden>
+        <section>
           <p>
             De startlijst van de Tour de France 2024 is bekend. (wijzigingen
             voorbehouden) Vanaf nu kun je je lijst doorgeven.
