update one for tourtoto 2025

--- a/WieWelkeRenner.html
+++ b/WieWelkeRenner.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="ridersNew.js"></script>
     <script defer src="players.js"></script>
-    <script defer src="script4.js"></script>
+    <script defer src="WieWelkeRenner.js"></script>
   </head>
   <body>
     <!-- Kieslijst -->
