--- a/InfoRenner.html
+++ b/InfoRenner.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="ridersNew.js"></script>
     <script defer src="players.js"></script>
-    <script defer src="script3.js"></script>
+    <script defer src="InfoRenner.js"></script>
   </head>
   <body>
     <!-- Kieslijst -->
