--- a/inschrijven.html
+++ b/inschrijven.html
@@ -14,11 +14,12 @@
     <script defer src="inschrijven.js"></script>
   </head>
   <body>
+    <!-- Modals -->
     <dialog id="dialog-greeting" class="dialog">
       <div class="dialog-wrapper">
         <div class="dialog-container">
-          <h2>Welkom, leuk dat je meedoet aan de Tourtoto 2025!</h2>
-          <p>Om te beginnen hebben we wat gegevens van je nodig...</p>
+          <h2>Welkom! Leuk dat je meedoet aan de Tourtoto 2025!</h2>
+          <p>Om te beginnen hebben we wat gegevens van je nodig.</p>
           <button id="dialog-greeting-btn">Ga verder</button>
         </div>
       </div>
@@ -26,43 +27,80 @@
     <dialog id="dialog-winners" class="dialog">
       <div class="dialog-wrapper">
         <div class="dialog-container">
-          <h2>
-            Gelukt! Kies nu je eindwinnaars voor de gele-, groene- en bolletjes
-            trui.
-          </h2>
+          <h2>Bedankt! Kies nu je winnaars voor:</h2>
+          <div>
+            <p class="yellow">Eindklassement (gele trui)</p>
+            <p class="green">Sprintklassement (groene trui)</p>
+            <p class="polka">Bergklassement (bolletjestrui)</p>
+          </div>
           <p>
-            In de rechter kolom kun je een renner uitzoeken en aanklikken. Deze
-            renner komt dan in de linker kolom te staan. Je kunt zoeken op voor-
-            en/of achternaam.
+            In de linker kolom kun je een renner uitzoeken en aanklikken. Deze
+            komt dan in de rechter kolom te staan. Je kunt hierbij gebruik maken
+            van de zoekfunctie. (Voor-en/of achternaam).
           </p>
           <button id="dialog-winners-btn">Ga verder</button>
         </div>
       </div>
     </dialog>
+    <dialog id="dialog-list" class="dialog">
+      <div class="dialog-wrapper">
+        <div class="dialog-container">
+          <h2>
+            Gelukt! <br />
+            Kies nu je 15 renners, gevolgd door je reserves. (maximaal 7)
+          </h2>
+          <p>
+            Nadat de eerste 15 renners zijn gekozen, komt de eerstvolgende die
+            je kiest bij de reserves.
+          </p>
+          <p>
+            Let op! De <u>volgorde van je reserve renners</u> is belangrijk
+            i.v.m. het eventuele doorschuiven hiervan. (Zie speluitleg)
+          </p>
+          <p>Als je lijst klaar is, druk je op "Lijst insturen".</p>
 
-    <!-- Modal -->
-    <section class="modal hidden">
-      <h1 id="modal-header"></h1>
-      <p id="modal-text"></p>
-
-      <button id="modal-button" class="button-green">Doorgaan</button>
-    </section>
-
-    <div class="overlay hidden"></div>
-
-    <section class="final-modal hidden">
-      <h1>Wil je de lijst insturen?</h1>
-      <div class="flex-row">
-        <button id="final-modal-button-cancel" class="button-red">
-          Annuleren
-        </button>
-        <button id="final-modal-button-confirm" class="button-green">
-          Lijst insturen!
-        </button>
+          <button id="dialog-list-btn">Naar de lijst</button>
+        </div>
       </div>
-    </section>
-
-    <div class="final-overlay hidden"></div>
+    </dialog>
+    <dialog id="dialog-max" class="dialog">
+      <div class="dialog-wrapper">
+        <div class="dialog-container">
+          <h2>Maximum aantal renners bereikt!</h2>
+          <p>Je kunt niet meer renners toevoegen.</p>
+          <button id="dialog-max-btn">OK</button>
+        </div>
+      </div>
+    </dialog>
+    <dialog id="dialog-send" class="dialog">
+      <div class="dialog-wrapper">
+        <div class="dialog-container">
+          <h2>Wil je de lijst insturen?</h2>
+          <p>Klik op lijst insturen om de lijst te verzenden.</p>
+          <div class="flex-row">
+            <button id="dialog-send-btn-cancel" class="button-red">
+              Annuleren
+            </button>
+            <button id="dialog-send-btn-confirm" class="button-green">
+              Lijst insturen
+            </button>
+          </div>
+        </div>
+      </div>
+    </dialog>
+    <dialog id="dialog-done" class="dialog">
+      <div class="dialog-wrapper">
+        <div class="dialog-container">
+          <h2>Je lijst is verzonden!</h2>
+          <p>Als alle lijsten zijn ontvangen en verwerkt, krijg je een mail.</p>
+          <p>
+            Je wordt nu doorverwezen naar de tourtoto website. Als het goed is
+            staat je naam nu bij "Deelnemers tot nu toe".
+          </p>
+          <button id="dialog-done-btn">Ok, naar de site</button>
+        </div>
+      </div>
+    </dialog>
 
     <!-- Gegevens -->
 
@@ -98,13 +136,15 @@
           id="phone"
           placeholder="Telefoonnr. (optioneel, als je in de appgroep wilt)"
         />
-        <input
-          id="next-button-one"
-          type="submit"
-          form="form"
-          class="submit-button button-green margin-top"
-          value="Volgende"
-        />
+        <div class="form-btn-container">
+          <input
+            id="next-button-one"
+            type="submit"
+            form="form"
+            class="form-button button-green margin-top"
+            value="Volgende"
+          />
+        </div>
       </form>
     </section>
 
@@ -115,14 +155,16 @@
         id="rider-list-container"
         class="hidden list-container margin-top"
       >
-        <h2>Kies een renner uit deze lijst:</h2>
-        <input
-          type="text"
-          class="search"
-          name="search"
-          id="search"
-          placeholder="Zoek op naam"
-        />
+        <div class="search-container">
+          <h2>Kies uit deze lijst:</h2>
+          <input
+            type="text"
+            class="search"
+            name="search"
+            id="search"
+            placeholder="Zoek op naam"
+          />
+        </div>
         <ul id="rider-list" class="rider-list"></ul>
       </section>
 
@@ -145,11 +187,8 @@
           <button class="button-red margin-top" id="reset-button-winners">
             Kies opnieuw
           </button>
-          <button
-            class="submit-button button-green margin-top"
-            id="next-button-two"
-          >
-            Bevestig keuzes
+          <button class="button-green margin-top" id="next-button-two">
+            Bevestig
           </button>
         </div>
       </section>
@@ -163,7 +202,7 @@
           <ul id="selected-riders"></ul>
         </div>
 
-        <button id="delete-button" class="padding-small">
+        <button id="delete-button" class="padding-small button-red center">
           Verwijder laatste
         </button>
 
@@ -173,25 +212,15 @@
           <ul id="reserve-riders"></ul>
         </div>
         <div class="button-container">
-          <button
-            id="delete-reserve-button"
-            class="padding-small margin-bottom"
-          >
-            Verwijder reserve
-          </button>
-          <button
-            id="reset-button"
-            class="button-red padding-small margin-bottom"
-          >
-            Lijst leegmaken
+          <button id="delete-reserve-button" class="padding-small button-red">
+            Verwijder laatste reserve
           </button>
         </div>
-        <button
-          id="submit-button"
-          disabled
-          class="submit-button button-green margin-top"
-        >
+        <button id="submit-button" disabled class="submit-button button-green">
           Lijst insturen!
+        </button>
+        <button id="reset-button" class="button-red padding-small">
+          Lijst leegmaken
         </button>
       </section>
     </div>
