--- a/WieWelkeRenner.html
+++ b/WieWelkeRenner.html
@@ -15,7 +15,10 @@
     <a href="index.html"><button>Terug</button></a>
 
     <main class="main">
-      <section id="rider-list-container" class="list-container margin-top">
+      <section
+        id="rider-list-container"
+        class="list-container-to-right margin-top"
+      >
         <h2 class="margin-bottom underline">Opgestelde renners:</h2>
         <ul id="rider-list" class="rider-list"></ul>
       </section>
