--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </p>
         
         <div class="button-container">
-          <a href="inschrijven.html" class="button button-green">Lijst maken en insturen 📄</a>
+          <!-- <a href="inschrijven.html" class="button button-green">Lijst maken en insturen 📄</a> -->
           <a href="uitleg.html" class="button button-blue">Speluitleg 📕</a>
           <a class="button button-yellow" href="betalen.html">Inleg betalen 💲</a>
         </div>
-          <div hidden>
+        <div hidden>
         <p>
           Zodra de <i style="font-weight: 600;">complete startlijst</i> met renners bekend is, krijg je een
           <i style="font-weight: 600;">berichtje.</i> De verwachting is dat dit uiterlijk
@@ -82,7 +82,7 @@
         <!-- Lijst voorlopige deelnemers -->
 
       <section id="deelnemers-container">
-        <h3>Deelnemers tot nu toe:</h3>
+        <h3>Deelnemers:</h3>
         <ol id="deelnemers"></ol>
       </section>
 
