--- a/InfoRenner.html
+++ b/InfoRenner.html
@@ -16,20 +16,24 @@
 
     <main class="main">
       <section id="rider-list-container" class="list-container margin-top">
-        <h2>Kies een renner uit de lijst:</h2>
-        <input
-          type="text"
-          class="search"
-          name="search"
-          id="search"
-          placeholder="Zoek op naam"
-        />
+        <div class="search-container">
+          <h2>Kies uit deze lijst:</h2>
+          <input
+            type="text"
+            class="search"
+            name="search"
+            id="search"
+            placeholder="Zoek op naam"
+          />
+        </div>
         <ul id="rider-list" class="rider-list"></ul>
       </section>
       <section id="selected-container" class="selected-container">
         <h1 class="margin-top margin-bottom underline">Opgesteld door:</h1>
-        <h3 class="inline" id="rider-count"></h3>
-        <h3 class="inline">van 27 deelnemers</h3>
+        <div>
+          <h3 class="inline" id="rider-count"></h3>
+          <h3 class="inline">van 27 deelnemers</h3>
+        </div>
         <div class="ul-container-one">
           <ul class="margin-top" id="selected-riders"></ul>
         </div>
