Na verwerken lijsten

--- a/WieWelkeRenner.html
+++ b/WieWelkeRenner.html
@@ -17,7 +17,7 @@
     <main class="main">
       <section
         id="rider-list-container"
-        class="list-container-to-right margin-top"
+        class="list-container-to-right margin-top margin-left"
       >
         <h2 class="margin-bottom underline">Opgestelde renners:</h2>
         <ul id="rider-list" class="rider-list"></ul>
