--- a/inschrijven(gesloten).html
+++ b/inschrijven(gesloten).html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/sweetalert2@11"
-    ></script>
     <title>Tourtoto lijstje maker</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="ridersNew.js"></script>
     <script defer src="inschrijven.js"></script>
+    <script type="module" src="FetchWrapper.js"></script>
   </head>
   <body>
     <!-- Modals -->
