--- a/WieWelkeRenner.html
+++ b/WieWelkeRenner.html
@@ -19,7 +19,7 @@
         id="rider-list-container"
         class="list-container-to-right margin-top margin-left"
       >
-        <h2 class="margin-bottom underline">Opgestelde renners:</h2>
+        <h2 class="underline margin-bottom">Opgestelde renners:</h2>
         <ul id="rider-list" class="rider-list"></ul>
       </section>
       <section id="selected-container" class="selected-container">
